cl-asdf (2:3.3.5-1) unstable; urgency=low IN PROGRESS

* Add support for package local nicknames to UIOP:DEFINE-PACKAGE and
	ASDF's package-inferred systems.  Extend support for package local
	nicknames to more lisp implementations.
* A number of fixes for Lispworks compatibility (thanks to Martin
	Simmons).
* Fixes for SBCL and ECL from Eric Timmons.
* Add support for source files with different file extensions to
	package-inferred-systems.  Thanks to Jingtao Xu for identifying
	the bug and providing a fix.
* Fixes for UIOP:WITH-TEMPORARY-FILE
* Miscellaneous bug fixes from Luís Oliveira.

cl-asdf (2:3.3.4-1) unstable; urgency=low
Bug fix release:
* SBCL compatibility: support local nicknames in package-inferred-system,
	address upgrade issues in SBCL 2.x (thanks to Eric Timmons).
* Clasp compatibility: fixes from Karsten Poeck.
* Lispworks compatibility: fixes from Martin Simmons.
* Documentation: multiple user-contributed fixes: Jan Moringen and
	Rommel Martinez.
* Bundle bug fixes: thanks to Guillaume Le Vaillant and François-René Rideau.
* Miscellaneous bug fixes.
* Tests: miscellaneous fixes and improvements.

-- Robert P. Goldman <rpgoldman@sift.net> Thu, 13 Feb 2020 17:09:39 -0600

cl-asdf (2:3.3.3-1) unstable; urgency=low

  Bug fix release:
  * Dependency tracking: fix bugs in handling misnamed secondary systems.
    We now distinguish between "syntactic" and "semantic" primariness,
    properly warn in case a secondary system is misnamed, yet properly
    recompile or avoid spurious recompilation depending on whether
    there or not is a conflict or redefinition.
    Similarly handle package-inferred-system (thanks to Eric Timmons).
    Better warning in a fishy case of compute-action-stamp.
  * UIOP: Fix loading, allow the user to specify UIOP location from which
	to load.
  * SBCL compatibility: Fix issue with deferred warnings on SBCL.
  * Allegro compatibility: Fix issue detecting "modern" lisp.